--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,5 +26,7 @@ jobs:
                       ~/.cargo/git/db/
                       target/
                   key: "${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}"
+            - name: Install Protoc
+              uses: arduino/setup-protoc@v3
             - name: Run tests
               run: cargo test
