--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -42,7 +42,7 @@ jobs:
             - name: Build docs
               run: cargo doc --no-deps
             - name: Add redirect
-              run: echo '<meta http-equiv="refresh" content="0;url=aoc/index.html">' > target/doc/index.html
+              run: echo '<meta http-equiv="refresh" content="0;url=protorpc/index.html">' > target/doc/index.html
             - name: Remove lock file
               run: rm target/doc/.lock
             - name: Upload artifact
