--- a/protorpc/Cargo.toml
+++ b/protorpc/Cargo.toml
@@ -9,8 +9,6 @@ bytes = "1"
 futures-core = "0.3"
 prost = "0.14"
 lru = "0.16"
-rand = "0.9"
-nanoid = "0.4"
 thiserror = "2"
 tokio-stream = "0.1"
 log = { version = "0.4", optional = true }
@@ -21,6 +19,14 @@ tokio = { version = "1", features = [
     "time",
     "rt",
 ] }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+uuid = { version = "1.17.0", features = ["v4", "js"] }
+fastrand = { version = "2.3", default-features = false, features = ["js"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+uuid = { version = "1.17.0", features = ["v4"] }
+fastrand = "2.3"
 
 [build-dependencies]
 prost-build = { version = "0.14", features = ["cleanup-markdown"] }
