--- a/protorpc/Cargo.toml
+++ b/protorpc/Cargo.toml
@@ -12,6 +12,22 @@ lru = "0.16"
 thiserror = "2"
 tokio-stream = "0.1"
 log = { version = "0.4", optional = true }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+wasmtimer = "0.4.2"
+wasm-bindgen-futures = "0.4.50"
+uuid = { version = "1.17.0", features = ["v4", "js"] }
+fastrand = { version = "2.3", default-features = false, features = ["js"] }
+tokio = { version = "1", features = [
+    "io-util",
+    "macros",
+    "sync",
+    "parking_lot",
+] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+fastrand = "2.3"
+uuid = { version = "1.17.0", features = ["v4"] }
 tokio = { version = "1", features = [
     "io-util",
     "macros",
@@ -19,14 +35,6 @@ tokio = { version = "1", features = [
     "time",
     "rt",
 ] }
-
-[target.'cfg(target_family = "wasm")'.dependencies]
-uuid = { version = "1.17.0", features = ["v4", "js"] }
-fastrand = { version = "2.3", default-features = false, features = ["js"] }
-
-[target.'cfg(not(target_family = "wasm"))'.dependencies]
-uuid = { version = "1.17.0", features = ["v4"] }
-fastrand = "2.3"
 
 [build-dependencies]
 prost-build = { version = "0.14", features = ["cleanup-markdown"] }
