--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,5 @@ jobs:
               uses: arduino/setup-protoc@v3
             - name: Run tests
               run: cargo test
+            - name: Run check for wasm32
+              run: cargo check --target wasm32-unknown-unknown
