--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,4 +31,6 @@ jobs:
             - name: Run tests
               run: cargo test
             - name: Run check for wasm32
-              run: cargo check --target wasm32-unknown-unknown
+              run: |
+                  rustup target add wasm32-unknown-unknown
+                  cargo check --target wasm32-unknown-unknown
