--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,4 +33,5 @@ jobs:
             - name: Run check for wasm32
               run: |
                   rustup target add wasm32-unknown-unknown
+                  cd protorpc
                   cargo check --target wasm32-unknown-unknown
