--- a/protorpc/Cargo.toml
+++ b/protorpc/Cargo.toml
@@ -9,9 +9,10 @@ bytes = "1"
 futures-core = "0.3"
 prost = "0.14"
 lru = "0.16"
-thiserror = "2"
 tokio-stream = "0.1"
 log = { version = "0.4", optional = true }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasmtimer = "0.4.2"
