--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,6 +8,7 @@ protorpc = { workspace = true, features = [] }
 anyhow = "1.0.98"
 prost = "0.14.1"
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [build-dependencies]
 protorpc-build = { workspace = true }
